<resources>
    <string name="app_name">ProjectTwo</string>
    <string name="add">Add</string>
    <string name="transfer">Transfer</string>
    <string name="remove">Remove</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Login Screen</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="permission_not_checked">Permission not checked</string>
    <string name="request_sms_permission">Request SMS Permission</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="send_test_sms">Send Test SMS</string>
    <string name="filter_by_name_or_location">Filter by name or location</string>
    <string name="show_deleted">Show deleted</string>
    <string name="sync">Sync</string>
</resources>